<resources>
    <string name="app_name">千寻漫画</string>
    <string name="action_settings">Settings</string>
    <string name="test_data">测试数据</string>
    <string name="text_homePage">首页</string>
    <string name="text_trace">我的漫画</string>
    <string name="text_account">账户</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="page1">收藏</string>
    <string name="page2">历史</string>
    <string name="page3">下载</string>

    <string name="login_success">login success</string>
    <string name="login">用户登陆</string>
    <string name="Username">用户名</string>
    <string name="Password">密码</string>
    <string name="forgot_your_password">密码忘记啦 ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
