<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:gravity="center"
    android:background="@color/colorGrey"
    android:orientation="horizontal"
    >

    <LinearLayout
        android:id="@+id/id_tab_homepage"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >
            <ImageButton
                android:id="@+id/id_tab_homepage_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/img_tab_homepage_48px"
                android:background="@color/colorGrey"
                android:layout_weight="1" />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/text_homePage"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_tab_trace"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >
        <ImageButton
            android:id="@+id/id_tab_trace_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/img_tab_trace_48px"
            android:background="@color/colorGrey"
            android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/text_trace"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_tab_account"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >
        <ImageButton
            android:id="@+id/id_tab_account_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/img_tab_accout_48px"
            android:background="@color/colorGrey"
            android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/text_account"/>
    </LinearLayout>
</LinearLayout>